updated customer classes and added tests